--- a/sass/_menus.scss
+++ b/sass/_menus.scss
@@ -15,6 +15,8 @@ $menu-text-colour: #fff;
 	padding: 0;
 	text-align: center;
 	transition: max-height 0.5s;
+	list-style-type: none;
+
 }
 
 @media screen and (max-width: 37.5em) {
@@ -70,6 +72,8 @@ $menu-text-colour: #fff;
 	#primary-menu {
 		max-height: 50px;
 		background-color: transparent;
+		padding: 0 1em;
+
 	}
 
 	#primary-menu > li {
@@ -109,6 +113,12 @@ $menu-text-colour: #fff;
 
 	#primary-menu > li:hover .sub-menu {
 		display:block;
+
+	}
+
+	.sub-menu > li:hover > .sub-menu {
+		display: block;
+		position: relative;
 	}
 
 	#primary-menu a{
